# shopcloud-django-monitoring

./: .gitignore  README.md  manage.py  runtests.py  setup.cfg
.github/workflows/: ci.yml
monitoring/: models.py  tests.py
