[metadata]
name = shopcloud-django-monitoring
version = 1.0.0
description = A Module for create site reliable engineering
long_description = file: README.rst
url = https://github.com/Talk-Point/shopcloud-django-monitoring
author = Konstantin Stoldt
author_email = konstantin.stoldt@talk-point.de
license = MIT-License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include = rest_framework/*
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.1
    shopcloud-streams >= 1.1.0
    shopcloud-django-toolbox >= 1.9.1
    shopcloud-django-instrumenting >= 1.1.2
    djangorestframework
    django-filter
    markdown
